--- a/_config.yml
+++ b/_config.yml
@@ -4,13 +4,14 @@
 
 # Site settings
 # ─────────────
-baseurl: /1718-BaP # the subpath of your site, e.g. /blog
+baseurl: # the subpath of your site, e.g. /blog
+# baseurl: /
 # host   : 127.0.0.1
 # port   : 4000
 
 # Custom Site variables
 # ─────────────────────
-title: 1718 BaP CMO
+title: Huisstijlgids Arte del Sueño vzw
 
 # Build settings
 # ──────────────
@@ -40,3 +41,4 @@ sass:
 #  style: expanded
 #  style: compact
 #  style: compressed
+
